Fixes from smoke test
Including triple scrollbars on list monitors and fixing the say bubble fonts

--- a/src/components/monitor/monitor.css
+++ b/src/components/monitor/monitor.css
@@ -82,6 +82,7 @@
     display: flex;
     flex-direction: column;
     overflow-y: scroll;
+    overflow-x: hidden;
     height: calc(100% - 44px);
 }
 
